finish task-manager api

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "test": "jest --watch",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
     "mongo": "/home/alberto/mongodb/bin/mongod --dbpath=/home/alberto/mongodb-data"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "env-cmd": "^10.1.0",
     "jest": "^26.0.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "supertest": "^4.0.2"
   }
 }
